--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "create-react-fluig": "bin/create-react-fluig.js"
   },
   "dependencies": {
+    "chalk": "^5.4.1",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.2",
     "prompts": "^2.4.2"
