--- a/package.json
+++ b/package.json
@@ -1,10 +1,24 @@
 {
-  "name": "react-fluig",
-  "private": true,
-  "version": "0.0.0",
+  "name": "create-react-fluig",
+  "version": "2.0.0",
+  "description": "CLI para criar projetos React integrados ao Fluig.",
+  "license": "MIT",
   "type": "module",
-  "workspaces": [
-    "packages/*"
+  "bin": {
+    "create-react-fluig": "./bin/create-react-fluig.js"
+  },
+  "files": [
+    "bin",
+    "template",
+    "README.md",
+    "LICENSE"
+  ],
+  "keywords": [
+    "fluig",
+    "react",
+    "cli",
+    "create-react-fluig",
+    "boilerplate"
   ],
   "scripts": {
     "dev": "npm-run-all --parallel dev:api dev:front",
@@ -12,16 +26,16 @@
     "dev:front": "npm --workspace=packages/react run dev",
     "build": "npm --workspace=packages/react run build"
   },
-  "devDependencies": {
-    "npm-run-all": "^4.1.5"
-  },
-  "bin": {
-    "create-react-fluig": "bin/create-react-fluig.js"
-  },
   "dependencies": {
     "chalk": "^5.4.1",
     "execa": "^9.6.0",
     "fs-extra": "^11.3.2",
     "prompts": "^2.4.2"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
